# CHIP8-cpp

./: .gitignore  CMakeLists.txt  README.md
inc/: machine.h
src/: handleOpcode.cpp  machine.cpp  main.cpp  opcodes.cpp
